--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food Ordering App</title>
+    <link rel="stylesheet" href="index.css"></link>
 </head>
 <body>
-    
+    <div id="root"></div>
+    <script type="module" src="App.js"></script>
 </body>
 </html>
